<resources>
    <string name="app_name" translatable="false">Updates Manager Extended</string>
    <string name="app_status_not_loaded">Module not loaded. Either Xposed not found, too old, or the module is not enabled in Xposed Manager</string>
    <string name="app_status_loaded_disabled">Module loaded, but disabled</string>
    <string name="app_status_loaded_enabled">Module loaded and enabled</string>
    <string name="enable_module">Enable module</string>
    <string name="filter_apps">Filter apps</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="blocked_first">Blocked first</string>
    <string name="select_blacklisted_apps">Select apps, that will be blocked from updates</string>
    <string name="import_settings">Import settings</string>
    <string name="export_settings">Export settings</string>
    <string name="about_app">About this app</string>
    <string name="about_app_part_1" translatable="false">Updates Manager Extended v4.2</string>
    <string name="about_app_part_2">This is an Xposed module, that allows you to block app updates (including automatic updates) for specific apps, no matter from which app store they were installed. After selecting apps, that should be blocked from updates, the app store will still detect updates for these apps, but will be unable to install these.</string>
    <string name="about_app_part_4">Created by Senliast,</string>
    <string name="about_app_part_5" translatable="false">https://github.com/Senliast/xposed-modules/tree/main/Updates_Manager_Extended</string>
    <string name="please_wait">Please wait...</string>
    <string name="preferences_successfully_imported">"Preferences successfully imported from file: "</string>
    <string name="not_a_valid_preferences_file">"This is not an Updates Manager Extended preferences file: "</string>
    <string name="error_importing_preferences">"Error importing preferences: "</string>
    <string name="preferences_successfully_exported">Preferences successfully exported to file:</string>
    <string name="error_exporting_preferences">"Error exporting preferences: "</string>
    <string name="app_status_waiting_for_reboot">Module not working, because it has been updated or installed and device has not been rebooted yet. All updates are currently allowed! Please reboot the device for the module to work.</string>
    <string name="welcome_message_title">Welcome to the Updates Manager Extended Xposed module</string>
    <string name="ok">OK</string>
    <string name="info_always_reboot_after_update">Please, after updating this module, always reboot the device, for the module to continue to work.</string>
    <string name="select_installation_sources">Select installation sources (app stores)</string>
    <string name="select_groups">Manage rules groups</string>
    <string name="add_group_title">Add group</string>
    <string name="add_group_text">Name</string>
    <string name="remove_group_title">Delete group</string>
    <string name="remove_group_text_1">The group \"</string>
    <string name="remove_group_text_2">\" will be deleted. Continue?</string>
    <string name="cancel">Cancel</string>
    <string name="rename_group_title">Rename group</string>
    <string name="default_group_name" translatable="false">Group 1</string>
    <string name="block_from_all">Block from all</string>
    <string name="fifteen_min">15 min.</string>
    <string name="thirty_min">30 min.</string>
    <string name="forty_five_min">45 min.</string>
    <string name="sixty_min">60 min.</string>
    <string name="disable_module">Disable module</string>
    <string name="disable_group">Disable group</string>
    <string name="group_status_disabled">Disabled</string>
    <string name="group_status_paused">"Paused for: "</string>
    <string name="group_status_enabled">Enabled</string>
    <string name="until_enabled_manually">Until enabled manually</string>
    <string name="app_status_paused">Module loaded put paused, time remaining:</string>
    <string name="app_status_disabled_for_groups">Module disabled</string>
</resources>